Fix padding for About on tablet

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,7 +44,7 @@
 
 .arrow {
   display: none;
-  @include tablet {
+  @include desktop {
     display: initial;
     z-index: 1;
     display: initial;
